src/index.css
*,
*::after,
*::before {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: "Karla", sans-serif;
  color: #fff;
}

.flex {
  display: flex;
}

/* typography */

h1,
h2 {
  font-weight: 700;
}

p,
input {
  font-size: 12px;
  font-weight: 500;
}

header > h1 {
  font-size: 20.75px;
}

/* content */

/* 1. header */

header {
  height: 65px;
  background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
  padding: 0 36px;
  align-items: center;
  justify-content: space-between;
}

/* 2. main content */

main {
  display: flex;
  justify-content: center;
}

.container {
  max-width: 580px;
  text-align: center;
  margin: 36px;
  flex-wrap: wrap;
  gap: 15px;
  justify-content: center;
}

input {
  flex-grow: 1;
  border: 1px solid grey;
}

button {
  color: #fff;
  background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
  border-style: none;
  font-weight: 700;
  cursor: pointer;
  width: 100%;
}

input,
button {
  padding: 11px;
  font-family: inherit;
  border-radius: 5px;
}

img {
  max-width: 100%;
}

/* 3. media queries */

@media (max-width: 400px) {
  header {
    flex-direction: column;
    height: auto;
    padding: 15px;
  }

  header > h1,
  header > p {
    margin: 0;
  }
}

@media (min-width: 570px) {
  header {
    justify-content: center;
    gap: 205px;
  }
}

